Engines are dead! Long live plugins! There is now no meaningful notion of an engine - all plugins can take advantage of the more powerful features that the engines plugin provides by including app directories, etc.
Init_engine.rb is no longer used; please use the plugin-standard init.rb instead.
Access all loaded plugins via the new Rails.plugins array, and by name using Rails.plugins[:plugin_name].
Access plugin metadata loaded automatically from about.yml: Rails.plugins[:name].about. Plugin#version is provided directly, for easy access.
Module.config is has been removed - use mattr_accessor instead, and initialize your default values via the init.rb mechanism.
Public asset helpers have been rewritten; instead of engine_stylesheet, now use stylesheet_link_tag :name, :plugin => "plugin_name"
Plugin migrations have been reworked to integrate into the main migration stream. Please run script/generate plugin_migration to create plugin migrations in your main application.
All references to engines have been removed; For example, any rake tasks which applied to engines now apply to all plugins. The default Rails rake tasks for plugins are overridden where necessary.
Layouts can now be shared via plugins - inspiration gratefully taken from PluginAWeek's plugin_routing :)
Actual routing from plugins is now possible, by including routes.rb in your plugin directory and using the from_plugin method in config/routes.rb (Ticket #182)


-----
1.1.4

Fixed creation of multipart emails (Ticket #190)
Added a temporary fix to the code-mixing issue. In your engine's test/test_helper.rb, please add the following lines:

  # Ensure that the code mixing and view loading from the application is disabled
  Engines.disable_app_views_loading = true
  Engines.disable_app_code_mixing = true
