@@ -6,14 +6,18 @@
 !!!Support for Rails < 1.2 has been dropped!!!; if you are using Rails =< 1.1.6, please use Engines 1.1.6, available from http://svn.rails-engines.org/engines/tags/rel_1.1.6
 Engines are dead! Long live plugins! There is now no meaningful notion of an engine - all plugins can take advantage of the more powerful features that the engines plugin provides by including app directories, etc.
 Init_engine.rb is no longer used; please use the plugin-standard init.rb instead.
+Engines.start is no longer required; please use the config.plugins array provided by Rails instead
+To get the most benefit from Engines, set config.plugins to ["engines", "*"] to load the engines plugin first, and then all other plugins in their normal order after.
 Access all loaded plugins via the new Rails.plugins array, and by name using Rails.plugins[:plugin_name].
 Access plugin metadata loaded automatically from about.yml: Rails.plugins[:name].about. Plugin#version is provided directly, for easy access.
 Module.config is has been removed - use mattr_accessor instead, and initialize your default values via the init.rb mechanism.
 Public asset helpers have been rewritten; instead of engine_stylesheet, now use stylesheet_link_tag :name, :plugin => "plugin_name"
 Plugin migrations have been reworked to integrate into the main migration stream. Please run script/generate plugin_migration to create plugin migrations in your main application.
+The fixture method for loading fixtures against any class has been removed; instead, engines will now provide a mechanism for loading fixtures from all plugins, by mirroring fixtures into a common location.
 All references to engines have been removed; For example, any rake tasks which applied to engines now apply to all plugins. The default Rails rake tasks for plugins are overridden where necessary.
 Layouts can now be shared via plugins - inspiration gratefully taken from PluginAWeek's plugin_routing :)
 Actual routing from plugins is now possible, by including routes.rb in your plugin directory and using the from_plugin method in config/routes.rb (Ticket #182)
+Controllers are no longer loaded twice if they're not present in the normal app/ directory (Ticket #177)
 
 
 -----
